--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 
   
-  <link href="assets/css/style.css" rel="preconnect stylesheet">
+  <link href="https://cdn.jsdelivr.net/gh/Breakout-Charts/frontend@master/assets/css/style.css" rel="preconnect stylesheet">
 
   
 </head>
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-          <img src="./assets/img/hero-img.webp" height="400" width="400" class="img-fluid" alt="">
+          <img src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/Breakout-Charts/frontend/master/assets/img/hero-img.webp&height=400px&width=400px" height="400" width="400" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -240,11 +240,11 @@
  
 
  
-  <script src="assets/vendor/countUp.js/main.js" ></script>
+  <script src="https://cdn.jsdelivr.net/gh/Breakout-Charts/frontend@master/assets/vendor/countUp.js/main.js" ></script>
  
 
   
-  <script src="assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Breakout-Charts/frontend@master/assets/js/main.js"></script>
 
 </body>
 
