--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Breakout Charts</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="We’re a team of professional Chartered Accountants having experience of over 5+ years in stock markets." name="description">
+  <meta content="breakoutcharts,breakoutcharts.in,www.breakoutcharts.in,breakoutcharts twitter,breakoutcharts app,breakoutcharts website, Breakout Charts,Breakout charts, Charts Breakout,@charts_breakout, @charts_breakout twitter" name="keywords">
 
  
- 
+  <meta property="og:title" content="Breakout Charts" />
+  <meta property="og:url" content="https://breakoutcharts.in/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="We’re a team of professional Chartered Accountants having experience of over 5+ years in stock markets." />
 
-
+  <meta property="og:locale" content="en_GB" />
   <link rel="preconnect stylesheet"  href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i">
 
 
@@ -84,7 +87,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-          <img src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/Breakout-Charts/frontend/master/assets/img/hero-img.webp&height=400px&width=400px" height="400" width="400" class="img-fluid" alt="">
+          <img alt="breakoutcharts logo" src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/Breakout-Charts/frontend/master/assets/img/hero-img.webp&height=400px&width=400px" height="400" width="400" class="img-fluid" >
         </div>
       </div>
     </div>
