--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 
   <meta property="og:locale" content="en_GB" />
   <link rel="preconnect stylesheet"  href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i">
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Y4PX7SN8WX');
+</script>
 
   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" >
   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
