--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Breakout Charts</title>
   <meta content="We’re a team of professional Chartered Accountants having experience of over 5+ years in stock markets." name="description">
   <meta content="breakoutcharts,breakoutcharts.in,www.breakoutcharts.in,breakoutcharts twitter,breakoutcharts app,breakoutcharts website, Breakout Charts,Breakout charts, Charts Breakout,@charts_breakout, @charts_breakout twitter" name="keywords">
-
+<meta name="google-site-verification" content="peYwMU0iNJUqhlnKS4lBE4hLIUhWkdajLqldUkbxVxo" />
  
   <meta property="og:title" content="Breakout Charts" />
   <meta property="og:url" content="https://breakoutcharts.in/" />
