--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-          <img alt="breakoutcharts logo" src="https://images.weserv.nl/?url=https://raw.githubusercontent.com/Breakout-Charts/frontend/master/assets/img/hero-img.webp&height=400px&width=400px" height="400" width="400" class="img-fluid" >
+          <img alt="breakoutcharts logo" src="https://cdn.jsdelivr.net/gh/Breakout-Charts/frontend@master/assets/img/hero-img.webp" height="400" width="400" class="img-fluid" >
         </div>
       </div>
     </div>
