updated for production v1.2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
 
   
-  <link href="./assets/css/style.css" rel="preconnect stylesheet">
+  <link href="https://cdn.jsdelivr.net/gh/Breakout-Charts/frontend@master/assets/css/style.css" rel="preconnect stylesheet">
 
   
 </head>
@@ -260,7 +260,7 @@
  
 
   
-  <script src="./assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Breakout-Charts/frontend@master/assets/js/main.js"></script>
 
 </body>
 
