updated follower & added admin link

--- a/index.html
+++ b/index.html
@@ -278,7 +278,10 @@
 
           Developed by <a target="_blank" href="https://github.com/kdaksh">Daksh</a>. Designed by <a target="_blank"
             href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+
+            <br>
+            <a target="_blank" href="https://app.jetadmin.io/app/breakoutcharts/">Admin</a>
+          </div>
       </div>
     </footer>
 
