--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
       <div class="header-social-links d-flex align-items-center">
         <a href="https://twitter.com/charts_breakout" target="_blank"><i class="bi bi-twitter"></i></a>
 
-        <a href="https://t.co/1hsI2GMamP" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="https://t.me/breakoutcharts" target="_blank"><i class="bi bi-telegram"></i></i></a>
-        <a href="https://youtu.be/CEeJZu_qq_Y" target="_blank"><i class="bi bi-youtube"></i></i></a>
+        <a href="https://www.instagram.com/breakout_charts/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://t.me/breakoutchartssss" target="_blank"><i class="bi bi-telegram"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCqezxdpny76zrQXK3C3xDGw" target="_blank"><i class="bi bi-youtube"></i></i></a>
       </div>
 
     </div>
@@ -147,7 +147,7 @@
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bi bi-twitter"></i></div>
               <h1 class="mt-3"><a href="https://twitter.com/charts_breakout" target="_blank"
-                  id="twitter-count">60,000+</a></h1>
+                  id="twitter-count">80,000+</a></h1>
               <p class="description mb-0">Followers On Twitter</p>
             </div>
           </div>
@@ -156,7 +156,7 @@
             data-aos-delay="100">
             <div class="icon-box icon-box-red">
               <div class="icon"><i class="bi bi-youtube"></i></div>
-              <h1 class="mt-3"><a href="https://youtu.be/CEeJZu_qq_Y" target="_blank" id="yt-count">2,000+</a></h1>
+              <h1 class="mt-3"><a href="https://www.youtube.com/channel/UCqezxdpny76zrQXK3C3xDGw" target="_blank" id="yt-count">2,000+</a></h1>
               <p class="description mb-0">Subscribers On Youtube</p>
             </div>
           </div>
@@ -165,7 +165,7 @@
             data-aos-delay="200">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bi bi-telegram"></i></div>
-              <h1 class="mt-3"><a href="https://t.me/breakoutcharts" target="_blank" id="tel-count">8,000+</a></h1>
+              <h1 class="mt-3"><a href="https://t.me/breakoutchartssss" target="_blank" id="tel-count">3700+</a></h1>
               <p class="description mb-0">Members On Telegram</p>
             </div>
           </div>
@@ -174,7 +174,7 @@
             data-aos-delay="300">
             <div class="icon-box icon-box-insta">
               <div class="icon"><i class="bi bi-instagram"></i></div>
-              <h1 class="mt-3"><a href="https://t.co/1hsI2GMamP" target="_blank" id="insta-count">1,000+</a></h1>
+              <h1 class="mt-3"><a href="https://www.instagram.com/breakout_charts/" target="_blank" id="insta-count">2700+</a></h1>
               <p class="description mb-0">Followers On Instagram</p>
             </div>
           </div>
