--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 </head>
 
 <body>
-  <div class="loader-screen">
+  <h1 style="text-align:center;color:red;">Wesbite Under Maintenance Till <b>'Tue Jun 07 2022 00:00:00 GMT+0530 (India Standard Time)'</b></h1>
+<!--   <div class="loader-screen">
     <div class="lds-roller">
       <div></div>
       <div></div>
@@ -297,7 +298,7 @@
 
 
 
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script> -->
 
 </body>
 
