--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     content="We’re a team of professional Chartered Accountants having experience of over 5+ years in stock markets." />
 
   <meta property="og:locale" content="en_GB" />
-  <link rel="preconnect stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i">
+<!--   <link rel="preconnect stylesheet"
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"> -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -35,19 +35,20 @@
     gtag('config', 'G-Y4PX7SN8WX');
   </script>
 
-  <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+<!--   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
 
 
   <link href="https://cdn.jsdelivr.net/gh/Breakout-Charts/Breakout-Charts.github.io@master/assets/css/style.css" rel="preconnect stylesheet">
-
+ -->
 
 </head>
 
 <body>
-  <h1 style="text-align:center;color:red;">Wesbite Under Maintenance Till <b>'Tue Jun 07 2022 00:00:00 GMT+0530 (India Standard Time)'</b></h1>
+  <h2 style="text-align:center;">Wesbite Under Maintenance Till:- <b style="color:red">'Tue Jun 07 2022 00:00:00 GMT+0530 (India Standard Time)'</b></h2>
+  
 <!--   <div class="loader-screen">
     <div class="lds-roller">
       <div></div>
