--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-  <h2 style="text-align:center;">Wesbite Under Maintenance Till:- <b style="color:red">'Tue Jun 07 2022 00:00:00 GMT+0530 (India Standard Time)'</b></h2>
+  <h2 style="text-align:center;">Wesbite Under Maintenance</h2>
   
 <!--   <div class="loader-screen">
     <div class="lds-roller">
