--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     content="We’re a team of professional Chartered Accountants having experience of over 5+ years in stock markets." />
 
   <meta property="og:locale" content="en_GB" />
-<!--   <link rel="preconnect stylesheet"
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"> -->
+  <link rel="preconnect stylesheet"
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i">
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -35,21 +35,21 @@
     gtag('config', 'G-Y4PX7SN8WX');
   </script>
 
-<!--   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
-  <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="preconnect stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
 
 
-  <link href="https://cdn.jsdelivr.net/gh/Breakout-Charts/Breakout-Charts.github.io@master/assets/css/style.css" rel="preconnect stylesheet">
- -->
+  <link href="./assets/css/style.css" rel="preconnect stylesheet">
+
 
 </head>
 
 <body>
-  <h2 style="text-align:center;">Wesbite Under Maintenance</h2>
+ 
   
-<!--   <div class="loader-screen">
+  <div class="loader-screen">
     <div class="lds-roller">
       <div></div>
       <div></div>
@@ -295,11 +295,11 @@
 
 
 
-  <script src="https://cdn.jsdelivr.net/gh/Breakout-Charts/Breakout-Charts.github.io@master/assets/vendor/countUp.js/main.js"></script>
+  <script src="./assets/vendor/countUp.js/main.js"></script>
 
 
 
-  <script src="assets/js/main.js"></script> -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
