--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
   </div>
 
   <div class="alert-top">
-
+<div class="alert alert-success">
+  hello
+</div>
 
   </div>
   <div class="alert-above">
@@ -293,7 +295,7 @@
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
+          
 
   <script src="./assets/vendor/countUp.js/main.js"></script>
 
