--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
 
             <br>
             <a target="_blank" href="https://app.jetadmin.io/app/breakoutcharts/">Admin</a>
+            
+            <div style="text-align: right !important;">
+              Last Modified : <i><b> <span id="lastModified"></span></i></b>
+            </div>
           </div>
       </div>
     </footer>
